--- a/OMHRD.API/Web.config
+++ b/OMHRD.API/Web.config
@@ -14,7 +14,8 @@
     <!--<add name="SBMS.WinUI.Properties.Settings.ConnectionString" providerName="System.Data.sqlclient" connectionString="Data Source=localhost; Initial Catalog=SBMS_db; user id=sa;pwd=Sqlserver@1; " />-->
     <add name="SBMS.WinUI.Properties.Settings.ConnectionString" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=C:\_sbms\dbv11\SBMS.mdf;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
     <!--<add name="SBMS.WinUI.Properties.Settings.ConnectionString" connectionString="Server=tcp:ranarocks.database.windows.net,1433;Initial Catalog=SBMS;Persist Security Info=False;User ID=ranarocks;Password=Sqlserver@1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
-    <add name="OMHRDModel" connectionString="metadata=res://*/OMHRDModel.csdl|res://*/OMHRDModel.ssdl|res://*/OMHRDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=OMHRD_v2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+    <add name="OMHRDModel" connectionString="metadata=res://*/OMHRDModel.csdl|res://*/OMHRDModel.ssdl|res://*/OMHRDModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:omhrd.database.windows.net,1433;Initial Catalog=omhrd_v2;Persist Security Info=False;User ID=omrhd_user;Password=singh.ng@1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
